secure-gate-core/tests/compile-fail/fixed_alias_zero_size.stderr
error[E0080]: evaluation of constant value failed
 --> tests/compile-fail/fixed_alias_zero_size.rs:3:1
  |
3 | fixed_alias!(ZeroKey, 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 0 but the index is 0
  |
  = note: this error originates in the macro `fixed_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
